CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(KLT)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(Eigen3 REQUIRED)

INCLUDE_DIRECTORIES(
	${EIGEN3_INCLUDE_DIR}
  ${OpenCV_INCLUDE_DIRS}
  inc
)

SET(
  PROJECT_LIBS
  ${OpenCV_LIBS}
)


ADD_EXECUTABLE(
  klt_test
  src/klt_test.cpp
)

TARGET_LINK_LIBRARIES(
  klt_test
  ${PROJECT_LIBS}
)
